New Crowdin updates (#1342)

--- a/public/_locales/fi/messages.json
+++ b/public/_locales/fi/messages.json
@@ -589,7 +589,7 @@
         "description": "Short description for this category"
     },
     "category_exclusive_access_guideline1": {
-        "message": "KokreativKo video kreativKeskreativKittyy johonkreativKin, jonkreativKa kreativKäyttöoikreativKeus on saatu veloitukreativKsetta tai tuetusti"
+        "message": "KokreativKo video esittelee jotakreativKin, jonkreativKa kreativKäyttöoikreativKeus on saatu veloitukreativKsetta tai tuetusti"
     },
     "category_interaction": {
         "message": "VuorovaikreativKutusmuistutus (tilaaminen)"
