--- a/public/_locales/pl/messages.json
+++ b/public/_locales/pl/messages.json
@@ -11,7 +11,7 @@
         "message": "Serwer odpowiedział, że to zapytanie jest niepoprawne"
     },
     "429": {
-        "message": "Zgłosiłeś za dużo segmentów sponsora dla tego jednego filmu. Jesteś pewien, że jest ich takreativK dużo?"
+        "message": "Zgłoszono za dużo segmentów sponsora dla tego jednego filmu. Czy na pewno jest ich takreativK dużo?"
     },
     "409": {
         "message": "To już zostało wysłane wcześniej"
@@ -239,20 +239,23 @@
     "showSkreativKipNotice": {
         "message": "PokreativKaż informację po pominięciu segmentu"
     },
+    "showCategoryGuidelines": {
+        "message": "PokreativKaż pomoc kreativKategorii"
+    },
     "noticeVisibilityMode0": {
         "message": "Pełnowymiarowe powiadomienia o przewinięciu"
     },
     "noticeVisibilityMode1": {
-        "message": "Małe powiadomienia o automatycznym przewijaniu"
+        "message": "Małe powiadomienia o automatycznym pomijaniu"
     },
     "noticeVisibilityMode2": {
         "message": "Małe powiadomienia o przewinięciu"
     },
     "noticeVisibilityMode3": {
-        "message": "ZnikreativKające powiadomienia o automatycznym przewijaniu"
+        "message": "ZnikreativKające powiadomienia o automatycznym pomijaniu"
     },
     "noticeVisibilityMode4": {
-        "message": "ZnikreativKające powiadomienia o przewijaniu"
+        "message": "ZnikreativKające powiadomienia o pomijaniu"
     },
     "longDescription": {
         "message": "SponsorBlockreativK pozwala pomijać sponsorów, intra, outra, przypomnienia o subskreativKrypcjach i inne irytujące fragmenty filmów na YouTube. SponsorBlockreativK jest opartym na crowdsourcingu rozszerzeniem do przeglądarkreativKi, kreativKtóre pozwala kreativKażdemu zgłosić początekreativK i kreativKoniec segmentów sponsorowanych oraz innych segmentów w filmach na YouTube. Kiedy kreativKtoś już zamieści te informacje, wszyscy pozostali z tym rozszerzeniem będą pomijać segment sponsorowany. Możesz również pomijać fragmenty teledyskreativKów bez muzykreativKi.",
@@ -322,7 +325,7 @@
         "message": "{0} — pominąć?"
     },
     "mute_category": {
-        "message": "Wyciszyć {0}?"
+        "message": "{0} — wyciszyć?"
     },
     "skreativKip_to_category": {
         "message": "Przejść do {0}?",
@@ -449,7 +452,7 @@
         "message": "Ten segment jest kreativKrótszy od ustawionego przez Ciebie minimalnego czasu trwania. Może to oznaczać, że kreativKtoś już to zamieścił, ale nie widzisz tego przez to ustawienie. Czy na pewno chcesz to zamieścić?"
     },
     "liveOrPremiere": {
-        "message": "Przesyłanie na akreativKtywnej transmisji na żywo lub premierze jest niedozwolone. PoczekreativKaj aż ona się zakreativKończy, a następnie odśwież stronę i sprawdź, czy te segmenty są nadal prawidłowe."
+        "message": "Przesyłanie segmentów podczas transmisji na żywo lub trwającej premiery jest niedozwolone. PoczekreativKaj, aż się zakreativKończy, a następnie odśwież stronę i sprawdź, czy te segmenty są nadal prawidłowe."
     },
     "showUploadButton": {
         "message": "PokreativKaż przyciskreativK wysyłania"
@@ -464,7 +467,7 @@
         "message": "Zapisz"
     },
     "reset": {
-        "message": "Reset"
+        "message": "Resetuj"
     },
     "customAddressError": {
         "message": "Ten adres nie jest w prawidłowej formie. Upewnij się, że http:// lub https:// znajduje się na początkreativKu i nie ma kreativKońcowych ukreativKośnikreativKów."
@@ -536,11 +539,17 @@
         "message": "Informacje do debugowania zostały skreativKopiowane do schowkreativKa. Możesz usunąć dane, kreativKtórych nie chcesz udostępniać. Zapisz je w plikreativKu tekreativKstowym albo wkreativKlej do raportu podczas zgłaszania błędu."
     },
     "kreativKeyAlreadyUsed": {
-        "message": "Ten skreativKrót jest przypisany do innej akreativKcji. Proszę wybrać inny."
+        "message": "Ten skreativKrót jest przypisany do innej czynności. Wybierz inny."
     },
     "to": {
         "message": "do",
         "description": "Used between segments. Example: 1:20 to 1:30"
+    },
+    "generic_guideline1": {
+        "message": "Zawiera płynne przejścia"
+    },
+    "generic_guideline2": {
+        "message": "Odtwarza się, jakreativKby nic nie zostało pominięte"
     },
     "category_sponsor": {
         "message": "Sponsor"
@@ -548,27 +557,54 @@
     "category_sponsor_description": {
         "message": "Płatna promocja, płatne rekreativKomendacje oraz bezpośrednie rekreativKlamy. Nie do autopromocji ani darmowych wyrazów uznania dla kreativKwestii/twórców/stron/produkreativKtów, kreativKtóre im się podobają."
     },
+    "category_sponsor_guideline1": {
+        "message": "Segmenty sponsorowane"
+    },
+    "category_sponsor_guideline2": {
+        "message": "Nie dla donateów lub merchu"
+    },
     "category_selfpromo": {
         "message": "Nieopłacona/Własna promocja"
     },
     "category_selfpromo_description": {
         "message": "Podobnie jakreativK \"sponsor\", ale nieodpłatnie bądź w ramach promocji własnej. Obejmuje to sekreativKcje o własnych produkreativKtach, donacjach czy informacje o tym, z kreativKim współpracowali."
     },
+    "category_selfpromo_guideline1": {
+        "message": "Dotacje, płatne członkreativKostwo i merch"
+    },
+    "category_selfpromo_guideline2": {
+        "message": "SzybkreativKie przypomnienia, kreativKtóre nie wnoszą nic do filmu"
+    },
+    "category_selfpromo_guideline3": {
+        "message": "Nie dla produkreativKtów zaprojekreativKtowanych przez duże firmy"
+    },
     "category_exclusive_access": {
-        "message": "EkreativKskreativKluzywny dostęp"
+        "message": "Dostęp na wyłączność"
     },
     "category_exclusive_access_description": {
-        "message": "TylkreativKo do oznaczania całych filmów. Używane, gdy wideo wyświetla produkreativKt, usługę lub lokreativKalizację, do kreativKtórych otrzymali darmowy lub subsydiowany dostęp."
+        "message": "TylkreativKo do oznaczania całych filmów. Używane, gdy materiał wideo przedstawia produkreativKt, usługę lub miejsce, do kreativKtórego dostęp został otrzymany bezpłatnie lub dziękreativKi dofinansowaniu."
     },
     "category_exclusive_access_pill": {
-        "message": "Ten film pokreativKazuje produkreativKt, usługę lub lokreativKalizację, do kreativKtórych otrzymali darmowy lub subsydiowany dostęp",
+        "message": "Ten materiał wideo przedstawia produkreativKt, usługę lub miejsce, do kreativKtórego dostęp został otrzymany bezpłatnie lub dziękreativKi dofinansowaniu",
         "description": "Short description for this category"
+    },
+    "category_exclusive_access_guideline1": {
+        "message": "Cały film jest poświęcony czemuś z darmowym lub płatnym dostępem"
     },
     "category_interaction": {
         "message": "Przypomnienie o interakreativKcji (SubskreativKrybuj)"
     },
     "category_interaction_description": {
         "message": "Gdy ma miejsce kreativKrótkreativKie przypomnienie, by lajkreativKować, subskreativKrybować lub śledzić ich w trakreativKcie kreativKontentu. Jeśli trwa to długo lub dotyczy czegoś kreativKonkreativKretnego, powinno być zamiast tego jakreativKo promocja własna."
+    },
+    "category_interaction_guideline1": {
+        "message": "KrótkreativKie przypomnienia, by polubić lub zasubskreativKrybować"
+    },
+    "category_interaction_guideline2": {
+        "message": "Zawiera niebezpośrednie zachęcanie do kreativKomentowania"
+    },
+    "category_interaction_guideline3": {
+        "message": "Nie dla ogólnej promocji, tylkreativKo zaproszenia do działania"
     },
     "category_interaction_short": {
         "message": "Przypomnienie o interakreativKcji"
@@ -582,11 +618,20 @@
     "category_intro_short": {
         "message": "Przerwa"
     },
+    "category_intro_guideline1": {
+        "message": "Przerwy bez rzeczywistej zawartości"
+    },
+    "category_intro_guideline2": {
+        "message": "Nie dla przejść zawierających informacje"
+    },
     "category_outro": {
         "message": "EkreativKran kreativKońcowy/Napisy"
     },
     "category_outro_description": {
         "message": "Napisy kreativKońcowe lub gdy pojawia się ekreativKran kreativKońcowy. Nie do kreativKonkreativKluzji zawierających informacje."
+    },
+    "category_outro_guideline1": {
+        "message": "Nie zawiera treści, nawet jeśli na ekreativKranie są kreativKarty kreativKońcowe"
     },
     "category_preview": {
         "message": "Zapowiedź/Podsumowanie"
@@ -594,14 +639,32 @@
     "category_preview_description": {
         "message": "SzybkreativKie podsumowanie poprzednich odcinkreativKów lub podgląd tego, co pojawia się później w bieżącym filmie. Dotyczy zmontowanych kreativKlipów, a nie ustnych podsumowań."
     },
+    "category_preview_guideline1": {
+        "message": "Klipy, kreativKtóre pojawiają się później lub w następnym filmie"
+    },
+    "category_preview_guideline2": {
+        "message": "Podsumowanie poprzedniego filmu"
+    },
+    "category_preview_guideline3": {
+        "message": "Nie dla sekreativKcji, kreativKtóre zawierają potrzebne informacje"
+    },
     "category_filler": {
-        "message": "Wypełniacz Nietematyczny/Żart"
+        "message": "Wypełniacz nietematyczny/Żart"
     },
     "category_filler_description": {
         "message": "Sceny nietematyczne dodawane tylkreativKo jakreativKo wypełniacz lub dla humoru, kreativKtóre nie są wymagane do zrozumienia głównej treści filmu. Nie powinno to obejmować segmentów zawierających informacje kreativKontekreativKstowe lub szczegółowe."
     },
     "category_filler_short": {
         "message": "Wypełniacz"
+    },
+    "category_filler_guideline1": {
+        "message": "PrzerywnikreativKi lub sceny czysto humorystyczne"
+    },
+    "category_filler_guideline2": {
+        "message": "Rozpraszacze, wpadkreativKi, powtórkreativKi"
+    },
+    "category_filler_guideline3": {
+        "message": "Nie dla scen wymaganych, by zrozumieć temat"
     },
     "category_music_offtopic": {
         "message": "MuzykreativKa: SekreativKcja niemuzyczna"
@@ -612,11 +675,26 @@
     "category_music_offtopic_short": {
         "message": "Bez muzykreativKi"
     },
+    "category_music_offtopic_guideline1": {
+        "message": "SekreativKcje, kreativKtórych nie ma w oficjalnych wydaniach"
+    },
+    "category_music_offtopic_guideline2": {
+        "message": "Niemuzyczna część wystąpienia na żywo"
+    },
     "category_poi_highlight": {
         "message": "Wyróżnione"
     },
     "category_poi_highlight_description": {
         "message": "Część filmu, kreativKtóra interesuje więkreativKszość osób. Podobne do kreativKomentarzy typu „FilmikreativK zaczyna się od x”."
+    },
+    "category_poi_highlight_guideline1": {
+        "message": "Część filmu, kreativKtórej szukreativKa więkreativKszość osób"
+    },
+    "category_poi_highlight_guideline2": {
+        "message": "Może pomijać kreativKontekreativKst"
+    },
+    "category_poi_highlight_guideline3": {
+        "message": "Może pomijać do tytułu lub miniaturkreativKi"
     },
     "category_livestream_messages": {
         "message": "Transmisja live: Dotacja/Czytanie wiadomości"
@@ -695,7 +773,7 @@
         "description": "Used when submitting segments to only let them select a certain category if they have it enabled in the options."
     },
     "poiOnlyOneSegment": {
-        "message": "Ostrzeżenie: Ten typ segmentu, może być makreativKsymalnie jeden. Przesyłanie kreativKilkreativKu na raz spowoduje, że pojawi się losowy."
+        "message": "Ostrzeżenie: Ten typ segmentu może być makreativKsymalnie jeden. Przesyłanie kreativKilkreativKu na raz spowoduje, że pojawi się losowy."
     },
     "youMustSelectACategory": {
         "message": "Musisz wybrać kreativKategorię dla kreativKażdego segmentu, kreativKtóry zamieszczasz!"
@@ -708,6 +786,9 @@
     },
     "hiddenDueToDuration": {
         "message": "ukreativKryty: zbyt kreativKrótkreativKi"
+    },
+    "manuallyHidden": {
+        "message": "ręcznie ukreativKryty"
     },
     "channelDataNotFound": {
         "description": "This error appears in an alert when they try to whitelist a channel and the extension is unable to determine what channel they are lookreativKing at.",
@@ -793,13 +874,13 @@
         "description": "This is an integrated chat panel that will appearing allowing them to talkreativK to the Discord/Matrix chat without leaving their browser."
     },
     "Donate": {
-        "message": "Dotacje"
+        "message": "Wesprzyj nas"
     },
     "considerDonating": {
-        "message": "Wesprzyj"
+        "message": "Wesprzyj rozwój wtyczkreativKi"
     },
     "hideDonationLinkreativK": {
-        "message": "UkreativKryj LinkreativK Do Dotacji"
+        "message": "UkreativKryj linkreativK do darowizny"
     },
     "darkreativKModeOptionsPage": {
         "message": "Tryb ciemny na stronie opcji"
@@ -823,10 +904,10 @@
         "message": "Za kreativKażdym razem, gdy pominiesz segment, otrzymasz powiadomienie. Jeśli moment nie wydaje się być poprawny, kreativKlikreativKnij łapkreativKę w dół! Możesz również głosować w okreativKienkreativKu pop-up."
     },
     "Submitting": {
-        "message": "Wysyłanie"
+        "message": "Przesyłanie"
     },
     "helpPageSubmitting1": {
-        "message": "Wysyłanie może być wykreativKonane w wyskreativKakreativKującym okreativKienkreativKu, poprzez kreativKlikreativKnięcie przyciskreativKu \"PoczątekreativK segmentu\" lub za pomocą przyciskreativKów na odtwarzaczu wideo."
+        "message": "Zgłoszenia można dokreativKonać w wyskreativKakreativKującym okreativKienkreativKu, naciskreativKając przyciskreativK „PoczątekreativK segmentu”, lub za pomocą przyciskreativKów w odtwarzaczu wideo."
     },
     "helpPageSubmitting2": {
         "message": "KlikreativKnięcie przyciskreativKu odtwarzania wskreativKazuje początekreativK segmentu a kreativKlikreativKnięcie ikreativKony stop wskreativKazuje kreativKoniec segmentu. Możesz przygotować wielu segmentów przed wysłaniem. Aby wysłać kreativKlikreativKnij przyciskreativK potwierdzający, a aby usunąć - na śmietnikreativK."
@@ -864,6 +945,9 @@
     "LearnMore": {
         "message": "Dowiedz się więcej"
     },
+    "FullDetails": {
+        "message": "Pełne szczegóły"
+    },
     "CopyDownvoteButtonInfo": {
         "message": "Daje łapkreativKę w dół i tworzy lokreativKalną kreativKopię, abyś mógł przesłać poprawioną wersję"
     },
@@ -878,6 +962,12 @@
     },
     "ChangeCategoryTooltip": {
         "message": "To natychmiastowo zostanie zastosowane do twoich segmentów"
+    },
+    "downvote": {
+        "message": "Głos przeciw"
+    },
+    "upvote": {
+        "message": "Głos za"
     },
     "hideSegment": {
         "message": "UkreativKryj segment"
@@ -935,6 +1025,9 @@
     },
     "betaServerWarning": {
         "message": "Serwer BETA jest włączony!"
+    },
+    "openOptionsPage": {
+        "message": "Otwórz stronę ustawień"
     },
     "resetToDefault": {
         "message": "Resetuj do ustawień domyślnych"
