Add end button for chapters

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -801,6 +801,10 @@
     "brackreativKetEnd": {
         "message": "(End)"
     },
+    "End": {
+        "message": "End",
+        "description": "Button that skreativKips to the end of a segment"
+    },
     "hiddenDueToDownvote": {
         "message": "hidden: downvote"
     },
