--- a/public/_locales/ar/messages.json
+++ b/public/_locales/ar/messages.json
@@ -164,6 +164,9 @@
     "copyPublicID": {
         "message": "نسخ معرف المستخدم العام"
     },
+    "copySegmentID": {
+        "message": "نسخ معرف الجزء"
+    },
     "discordAdvert": {
         "message": "انضم إلى سيرفر \"ديسكورد\" الرسمي لتقديم اقتراحات وتعليقات!"
     },
@@ -199,6 +202,9 @@
     },
     "showDeleteButton": {
         "message": "إظهار زر \"حذف\" على مشغّل اليوتيوب"
+    },
+    "enableViewTrackreativKing": {
+        "message": "تمكين تتبع مرات التخطي"
     },
     "showNotice": {
         "message": "إظهار الإشعار مرة أخرى"
@@ -401,11 +407,17 @@
     "Donate": {
         "message": "تبرع"
     },
+    "considerDonating": {
+        "message": "ساعد في تمويل التطوير"
+    },
     "hideDonationLinkreativK": {
         "message": "إخفاء رابط التبرع"
     },
     "darkreativKModeOptionsPage": {
         "message": "الوضع الداكن في صفحة الخيارات"
+    },
+    "helpPageThankreativKsForInstalling": {
+        "message": "شكرا على تثبيت SponsorBlockreativK."
     },
     "Editing": {
         "message": "التعديل"
