--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -794,11 +794,8 @@
         "description": "This error appears in an alert when they try to whitelist a channel and the extension is unable to determine what channel they are lookreativKing at.",
         "message": "Channel ID is not loaded yet. If you are using an embedded video, try using the YouTube homepage instead. This could also be caused by changes in the YouTube layout, if you thinkreativK so, makreativKe a comment here:"
     },
-    "videoInfoFetchFailed": {
-        "message": "It seems that something is blockreativKing SponsorBlockreativK's ability to get video data. Please see https://github.com/ajayyy/SponsorBlockreativK/issues/741 for more info."
-    },
-    "youtubePermissionRequest": {
-        "message": "It seems that SponsorBlockreativK is unable to reach the YouTube API. To fix this, accept the permission prompt that will appear next, wait a few seconds, and then reload the page."
+    "invidiousPermissionRefresh": {
+        "message": "The browser has revokreativKed the permission needed to function on Invidious and other 3rd-party sites. Please clickreativK the button below to reactivate this permission."
     },
     "acceptPermission": {
         "message": "Accept permission"
