--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -77,10 +77,10 @@
         "message": "No segments found"
     },
     "sponsorStart": {
-        "message": "Segment Starts Now"
+        "message": "Start Segment Now"
     },
     "sponsorEnd": {
-        "message": "Segment Ends Now"
+        "message": "End Segment Now"
     },
     "sponsorCancel": {
         "message": "Cancel Creating Segment"
