Add tooltip to sort segments

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -125,6 +125,9 @@
     "SubmitTimes": {
         "message": "Submit Segments"
     },
+    "sortSegments": {
+        "message": "Sort Segments"
+    },
     "submitCheck": {
         "message": "Are you sure you want to submit this?"
     },
