Add "Export segments as URL" option the unsubmitted videos section

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -1205,5 +1205,8 @@
     "actions": {
         "message": "Actions",
         "description": "Header of the unsubmitted segments list"
+    },
+    "exportSegmentsAsURL": {
+        "message": "Export segments as URL"
     }
 }
