--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -1207,6 +1207,6 @@
         "description": "Header of the unsubmitted segments list"
     },
     "exportSegmentsAsURL": {
-        "message": "Export segments as URL"
+        "message": "Share as URL"
     }
 }
