--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -467,7 +467,7 @@
         "message": "Use manual skreativKip when a full video label exists"
     },
     "whatManualSkreativKipOnFullVideo": {
-        "message": "For people who want to watch the video uninteruppted if it is fully sponsored or self promotion."
+        "message": "For people who want to watch the video uninterrupted if it is fully sponsored or self promotion."
     },
     "skreativKipNoticeDuration": {
         "message": "SkreativKip notice duration (seconds):"
