clarify what needs to be translated

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -1140,7 +1140,7 @@
     },
     "cantAfford": {
         "message": "If you can't afford to purchase a license, click {here} to see if you are eligible for a discount",
-        "description": "Keep the curly braces"
+        "description": "Keep the curly braces. The word 'here' should be translated as well."
     },
     "patreonSignIn": {
         "message": "Sign in with Patreon"
